[package]
name = "glotaran_converter_cli"
version = "0.1.0"
edition = "2021"
authors = [ "Eduardo Gonik" ] 
license = "MIT"
description = "CLI to interact with glotaran converter lib"
repository = "https://github.com/egonik-unlp/glotaran_converter_cli"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.5", features = ["derive"] }
glotaran_converter_lib = { version = "0.1.0", path = "../glotaran_converter_lib" }
